Fix video stuck after tab reparenting

Currently a display only acks surfaces that it hears about via
SurfaceDamaged, but there is no call to SurfaceDamaged for surfaces that
are being embedded for the first time. That means if Display A goes
invisible before it gets a chance to ack a surface, and then this
surface gets embedded by Display B, since there is no call to
SurfaceDamaged in Display B, the surface never gets acked and appears
stuck. Make sure we ack all surfaces embedded by the display, and not
just the ones received in SurfaceDamaged.

Bug: 912000
Change-Id: I027a5ac37b8c6e564f008a871ca1ec8ad0190733
Reviewed-on: https://chromium-review.googlesource.com/c/1400943
Reviewed-by: kylechar <kylechar@chromium.org>
Commit-Queue: Saman Sami <samans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620889}
Former-commit-id: 2886e0adfb9818eb12ac63c6bae9395d4c6c78cd